Added install script + version bumped in spec + updated man

--- a/SOURCES/mkcryptpasswd.8
+++ b/SOURCES/mkcryptpasswd.8
@@ -1,6 +1,6 @@
 .\" Manpage for mkcryptpasswd
 
-.TH MKCRYPTPASSWD 8 "19 Oct 2015" "mkcryptpasswd 1.4.1" "MkCryptPasswd Manual"
+.TH MKCRYPTPASSWD 8 "2 Jan 2016" "mkcryptpasswd 1.5.0" "MkCryptPasswd Manual"
 
 .SH NAME 
 
@@ -37,11 +37,11 @@ Generate password encrypted by SHA algorithm with 256 bits digests
 Generate password encrypted by SHA algorithm with 512 bits digests (default)
 
 .TP
-.B --strong, -S
+.B --strong, -s
 Return error if password is too weak
 
 .TP
-.B --stdin, -s
+.B --stdin, -S
 Read password from stdin
 
 .TP
