Updated man page

--- a/SOURCES/mkcryptpasswd.8
+++ b/SOURCES/mkcryptpasswd.8
@@ -1,6 +1,6 @@
 .\" Manpage for mkcryptpasswd
 
-.TH MKCRYPTPASSWD 8 "2 Jan 2016" "mkcryptpasswd 1.5.0" "MkCryptPasswd Manual"
+.TH MKCRYPTPASSWD 8 "2 Jan 2016" "mkcryptpasswd 1.5.0" "mkcryptpasswd Manual"
 
 .SH NAME 
 
