install.sh refactoring

--- a/SOURCES/mkcryptpasswd.8
+++ b/SOURCES/mkcryptpasswd.8
@@ -1,6 +1,6 @@
 .\" Manpage for mkcryptpasswd
 
-.TH MKCRYPTPASSWD 8 "2 Jan 2016" "mkcryptpasswd 1.5.0" "mkcryptpasswd Manual"
+.TH MKCRYPTPASSWD 8 "16 Nov 2016" "mkcryptpasswd 1.6.0" "mkcryptpasswd Manual"
 
 .SH NAME 
 
@@ -65,7 +65,7 @@ Show help message
 Please send any comments or bug reports to <\fBopensource@essentialkaos.com\fP>.
 
 .SH LICENSE
-Essential Kaos Open Source License <\fBhttps://essentialkaos.com/ekol?en\fP>
+Essential Kaos Open Source License <\fBhttps://essentialkaos.com/ekol\fP>
 
 .SH AUTHOR
 
