--- a/SOURCES/mkcryptpasswd.8
+++ b/SOURCES/mkcryptpasswd.8
@@ -1,6 +1,6 @@
 .\" Manpage for mkcryptpasswd
 
-.TH MKCRYPTPASSWD 8 "24 Apr 2017" "mkcryptpasswd 1.6.3" "mkcryptpasswd Manual"
+.TH MKCRYPTPASSWD 8 "18 Jul 2017" "mkcryptpasswd 1.7.0" "mkcryptpasswd Manual"
 
 .SH NAME 
 
@@ -41,7 +41,7 @@ Generate password encrypted by SHA algorithm with 512 bits digests (default)
 Return error if password is too weak
 
 .TP
-.B --stdin, -S
+.B --stdin, --
 Read password from stdin
 
 .TP
